added dark theme

--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/wp-content/themes/simplelotus",
-  "devUrl": "http://example.test",
+  "devUrl": "http://wordpress.test",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
